--- a/index.html
+++ b/index.html
@@ -9,14 +9,4 @@
   <body>
     <script src="./js/game.js"></script>
   </body>
-</html>    else {
-  fight();
-}
-// if player did not chose 1 or 2 in prompt
-} else {
-window.alert("You need to pick a valid option. Try again!");
-}
-};
-
-// run fight function to start game
-fight();
+</html>
